--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Fountain44!
+spring.datasource.password=
 spring.datasource.url=jdbc:mariadb://localhost:3306/springboot-thymeleaf-crud-web-app?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto=update
